Kubernetes/K8's_Operators/Elastic/operator/aiops.yaml
# aiops.yaml
aiopsYaml: |-
  [...]
